--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -19,7 +19,7 @@
                                   Meanings and infromation to songs has been simpler with the assistance of MusicPedia.
                                   Share musical knowledge to the community by creating an account here and sharing a blog post here.</p>
                                 <div class="mouse">
-                                    <a href="#" class="mouse-icon">
+                                    <a href="#stuff" class="mouse-icon">
                                         <div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
                                     </a>
                                 </div>
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <section class="ftco-section bg-light">
+    <section class="ftco-section bg-light" id = "suff">
         <div class="container">
             <div class="row d-flex">
                 {%for article in pings%}
